testsuite/poke.pkl/apop-diag-2.pk
/* { dg-do compile } */

var a = int[2] ();

apop (a); /* { dg-error "apop operation is not allowed" } */
